# 2021Offer

./: .gitignore  LICENSE  README.md
Cpp/: CMakeLists.txt  README.md
Cpp/demo/: CMakeLists.txt  CharInput_test.cc  Diamond_inheritance.cc  ListInput_test.cc  Pointer_Ref.cc  bind_test.cc  cast_test.cc  inheritance.cc  new_test.cc  sizeof_test.cc  split.cc  suffix_expression.cc  test.cc
Cpp/demo/OOP_C/: Circle.c  Circle.h  Rectangle.c  Rectangle.h  Shape.c  Shape.h  main.c
Cpp/demo/smart_ptr/: main.cc  shared_ptr.h  unique_ptr.h
DataBase/: README.md
SolveProblem/: CMakeLists.txt  CharInput_test.cc  ListInput_test.cc
network_programming/: README.md
network_programming/demo/: dd2hex.cc  hex2dd.cc
system_programming/: CMakeLists.txt  README.md
system_programming/IPC/fifo/: fifo_writer.cc
system_programming/IPC/mmap/: mmap_reader.cc  mmap_writer.cc
system_programming/IPC/pipe/: pipe_brothers.cc
system_programming/Thread_sync/: CMakeLists.txt  Semaphore.h  mutex_test.cc  producer_consumer_cv.cc  rwlock_test.cc  sem_test.cc
system_programming/demo/: CMakeLists.txt
system_programming/demo/IPC/: CMakeLists.txt
system_programming/demo/IPC/fifo/: CMakeLists.txt  fifo_reader.cc
system_programming/demo/IPC/mmap/: CMakeLists.txt  mmap_reader.cc  mmap_writer.cc
system_programming/demo/IPC/pipe/: CMakeLists.txt  pipe_Father_son.cc  pipe_brothers.cc
system_programming/demo/Thread_sync/: CMakeLists.txt  Semaphore.h  dead_lock.cc  mutex_test.cc  producer_consumer_cv.cc  rwlock_test.cc  sem_test.cc
system_programming/demo/crash_core/: crash.cc
