add_executable(sizeof_test sizeof_test.cc)
add_executable(CharInput_test CharInput_test.cc)
add_executable(ListInput_test ListInput_test.cc)
add_executable(oop_c_test OOP_C/main.c OOP_C/Shape.c OOP_C/Rectangle.c OOP_C/Circle.c)
add_executable(Pointer_Ref Pointer_Ref.cc)
add_executable(Inheritance_test inheritance.cc)